--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
   "pages": [
+    "pages/trending/trending",
     "pages/index/index",
     "pages/details/details",
-    "pages/about/about",
-    "pages/trending/trending"
+    "pages/about/about"
   ],
   "window": {
     "backgroundTextStyle": "light",
